<resources>
    <string name="app_name">fit-me</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_ex_item">Ex Item</string>
    <string name="title_exercises">Exercises Category #</string>
    <string name="title_categories">Categories</string>
    <string name="hint_word">Recipe...</string>
    <string name="button_save">Save</string>
    <string name="title_my_recipes">My Recipes</string>
    <string name="empty_not_saved">Recipe not saved because it is empty.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_recipe_list">Category</string>

</resources>
