<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_categories">

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.colman.fit_me.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_navigation_categories_to_navigation_exercises"
            app:popUpTo="@id/navigation_user_profile"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_exercises" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.colman.fit_me.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.colman.fit_me.ui.user_profile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.colman.fit_me.ui.exercises.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercises" >
    </fragment>

    <fragment
        android:id="@+id/navigation_ex_item"
        android:name="com.colman.fit_me.ui.ex_item.ExItemdFragment"
        android:label="@string/title_ex_item"
        tools:layout="@layout/fragment_ex" />
</navigation>
